c4prj2_input/grade.txt
Grading at Wed Apr 28 04:20:08 UTC 2021
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:23:14: error: ‘i’ undeclared (first use in this function)
       ptr += i;
              ^
input.c:23:14: note: each undeclared identifier is reported only once for each function it appears in
Compilation of input.c failed

Overall Grade: F
